// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard component  render as expected  1`] = `
<div
  className="container-fluid no-padding"
  id="dashboard"
>
  <TopBar
    avatar={true}
    handleSubmit={[Function]}
    push={[Function]}
    search={true}
  >
    <nav
      className="nav"
    >
      <a
        className="nav-link"
        href="#"
        id="getTopRecipes"
        onClick={[Function]}
      >
        Top recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getMyRecipes"
        onClick={[Function]}
      >
        My recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getFavRecipes"
        onClick={[Function]}
      >
        Favourite recipes
      </a>
    </nav>
    <nav
      className="nav"
    >
      <a
        className="nav-link logout text-capitalize"
        href="#"
        id="logout"
        onClick={[Function]}
      >
        logout
      </a>
    </nav>
  </TopBar>
  <div
    className="row dashboard d-flex flex-column"
  >
    <h1
      className="display-4 text-capitalize text-left
                bold text-dark d-flex justify-content-between align-items-center"
      id="display-1"
    >
      top recipes
      <span
        className="lead"
      >
        Total Recipes: 1
      </span>
    </h1>
    <RecipesGrid
      isUserFav={[Function]}
      loading={false}
      recipes={
        Array [
          Object {
            "category": "",
            "downVotes": 1,
            "recipeId": 1,
            "recipeName": "Ogbemudia Rex",
            "upVotes": 1,
            "views": 1,
          },
        ]
      }
      toggleFav={[Function]}
    />
  </div>
</div>
`;

exports[`Dashboard component  render as expected when Top Recipes nav link is clicked  1`] = `
<div
  className="container-fluid no-padding"
  id="dashboard"
>
  <TopBar
    avatar={true}
    handleSubmit={[Function]}
    push={[Function]}
    search={true}
  >
    <nav
      className="nav"
    >
      <a
        className="nav-link"
        href="#"
        id="getTopRecipes"
        onClick={[Function]}
      >
        Top recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getMyRecipes"
        onClick={[Function]}
      >
        My recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getFavRecipes"
        onClick={[Function]}
      >
        Favourite recipes
      </a>
    </nav>
    <nav
      className="nav"
    >
      <a
        className="nav-link logout text-capitalize"
        href="#"
        id="logout"
        onClick={[Function]}
      >
        logout
      </a>
    </nav>
  </TopBar>
  <div
    className="row dashboard d-flex flex-column"
  >
    <h1
      className="display-4 text-capitalize text-left
                bold text-dark d-flex justify-content-between align-items-center"
      id="display-1"
    >
      top recipes
      <span
        className="lead"
      >
        Total Recipes: 1
      </span>
    </h1>
    <RecipesGrid
      isUserFav={[Function]}
      loading={false}
      recipes={
        Array [
          Object {
            "category": "",
            "downVotes": 1,
            "recipeId": 1,
            "recipeName": "Ogbemudia Rex",
            "upVotes": 1,
            "views": 1,
          },
        ]
      }
      toggleFav={[Function]}
    />
  </div>
</div>
`;

exports[`Dashboard component  render as expected when Top Recipes nav link is clicked  2`] = `
<div
  className="container-fluid no-padding"
  id="dashboard"
>
  <TopBar
    avatar={true}
    handleSubmit={[Function]}
    push={[Function]}
    search={true}
  >
    <nav
      className="nav"
    >
      <a
        className="nav-link"
        href="#"
        id="getTopRecipes"
        onClick={[Function]}
      >
        Top recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getMyRecipes"
        onClick={[Function]}
      >
        My recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getFavRecipes"
        onClick={[Function]}
      >
        Favourite recipes
      </a>
    </nav>
    <nav
      className="nav"
    >
      <a
        className="nav-link logout text-capitalize"
        href="#"
        id="logout"
        onClick={[Function]}
      >
        logout
      </a>
    </nav>
  </TopBar>
  <div
    className="row dashboard d-flex flex-column"
  >
    <h1
      className="display-4 text-capitalize text-left
                bold text-dark d-flex justify-content-between align-items-center"
      id="display-1"
    >
      top recipes
      <span
        className="lead"
      >
        Total Recipes: 1
      </span>
    </h1>
    <RecipesGrid
      isUserFav={[Function]}
      loading={false}
      recipes={
        Array [
          Object {
            "category": "",
            "downVotes": 1,
            "recipeId": 1,
            "recipeName": "Ogbemudia Rex",
            "upVotes": 1,
            "views": 1,
          },
        ]
      }
      toggleFav={[Function]}
    />
  </div>
</div>
`;

exports[`Dashboard component  render as expected when favorite Recipes nav link is clicked  1`] = `
<div
  className="container-fluid no-padding"
  id="dashboard"
>
  <TopBar
    avatar={true}
    handleSubmit={[Function]}
    push={[Function]}
    search={true}
  >
    <nav
      className="nav"
    >
      <a
        className="nav-link"
        href="#"
        id="getTopRecipes"
        onClick={[Function]}
      >
        Top recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getMyRecipes"
        onClick={[Function]}
      >
        My recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getFavRecipes"
        onClick={[Function]}
      >
        Favourite recipes
      </a>
    </nav>
    <nav
      className="nav"
    >
      <a
        className="nav-link logout text-capitalize"
        href="#"
        id="logout"
        onClick={[Function]}
      >
        logout
      </a>
    </nav>
  </TopBar>
  <div
    className="row dashboard d-flex flex-column"
  >
    <h1
      className="display-4 text-capitalize text-left
                bold text-dark d-flex justify-content-between align-items-center"
      id="display-1"
    >
      top recipes
      <span
        className="lead"
      >
        Total Recipes: 1
      </span>
    </h1>
    <RecipesGrid
      isUserFav={[Function]}
      loading={false}
      recipes={
        Array [
          Object {
            "category": "",
            "downVotes": 1,
            "recipeId": 1,
            "recipeName": "Ogbemudia Rex",
            "upVotes": 1,
            "views": 1,
          },
        ]
      }
      toggleFav={[Function]}
    />
  </div>
</div>
`;

exports[`Dashboard component  render as expected when favorite Recipes nav link is clicked  2`] = `
<div
  className="container-fluid no-padding"
  id="dashboard"
>
  <TopBar
    avatar={true}
    handleSubmit={[Function]}
    push={[Function]}
    search={true}
  >
    <nav
      className="nav"
    >
      <a
        className="nav-link"
        href="#"
        id="getTopRecipes"
        onClick={[Function]}
      >
        Top recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getMyRecipes"
        onClick={[Function]}
      >
        My recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getFavRecipes"
        onClick={[Function]}
      >
        Favourite recipes
      </a>
    </nav>
    <nav
      className="nav"
    >
      <a
        className="nav-link logout text-capitalize"
        href="#"
        id="logout"
        onClick={[Function]}
      >
        logout
      </a>
    </nav>
  </TopBar>
  <div
    className="row dashboard d-flex flex-column"
  >
    <h1
      className="display-4 text-capitalize text-left
                bold text-dark d-flex justify-content-between align-items-center"
      id="display-1"
    >
      top recipes
      <span
        className="lead"
      >
        Total Recipes: 1
      </span>
    </h1>
    <RecipesGrid
      isUserFav={[Function]}
      loading={false}
      recipes={
        Array [
          Object {
            "category": "",
            "downVotes": 1,
            "recipeId": 1,
            "recipeName": "Ogbemudia Rex",
            "upVotes": 1,
            "views": 1,
          },
        ]
      }
      toggleFav={[Function]}
    />
  </div>
</div>
`;

exports[`Dashboard component  render as expected when logout link is clicked  1`] = `
<div
  className="container-fluid no-padding"
  id="dashboard"
>
  <TopBar
    avatar={true}
    handleSubmit={[Function]}
    push={[Function]}
    search={true}
  >
    <nav
      className="nav"
    >
      <a
        className="nav-link"
        href="#"
        id="getTopRecipes"
        onClick={[Function]}
      >
        Top recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getMyRecipes"
        onClick={[Function]}
      >
        My recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getFavRecipes"
        onClick={[Function]}
      >
        Favourite recipes
      </a>
    </nav>
    <nav
      className="nav"
    >
      <a
        className="nav-link logout text-capitalize"
        href="#"
        id="logout"
        onClick={[Function]}
      >
        logout
      </a>
    </nav>
  </TopBar>
  <div
    className="row dashboard d-flex flex-column"
  >
    <h1
      className="display-4 text-capitalize text-left
                bold text-dark d-flex justify-content-between align-items-center"
      id="display-1"
    >
      top recipes
      <span
        className="lead"
      >
        Total Recipes: 1
      </span>
    </h1>
    <RecipesGrid
      isUserFav={[Function]}
      loading={false}
      recipes={
        Array [
          Object {
            "category": "",
            "downVotes": 1,
            "recipeId": 1,
            "recipeName": "Ogbemudia Rex",
            "upVotes": 1,
            "views": 1,
          },
        ]
      }
      toggleFav={[Function]}
    />
  </div>
</div>
`;

exports[`Dashboard component  render as expected when logout link is clicked  2`] = `
<div
  className="container-fluid no-padding"
  id="dashboard"
>
  <TopBar
    avatar={true}
    handleSubmit={[Function]}
    push={[Function]}
    search={true}
  >
    <nav
      className="nav"
    >
      <a
        className="nav-link"
        href="#"
        id="getTopRecipes"
        onClick={[Function]}
      >
        Top recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getMyRecipes"
        onClick={[Function]}
      >
        My recipes
      </a>
      <a
        className="nav-link"
        href="#"
        id="getFavRecipes"
        onClick={[Function]}
      >
        Favourite recipes
      </a>
    </nav>
    <nav
      className="nav"
    >
      <a
        className="nav-link logout text-capitalize"
        href="#"
        id="logout"
        onClick={[Function]}
      >
        logout
      </a>
    </nav>
  </TopBar>
  <div
    className="row dashboard d-flex flex-column"
  >
    <h1
      className="display-4 text-capitalize text-left
                bold text-dark d-flex justify-content-between align-items-center"
      id="display-1"
    >
      top recipes
      <span
        className="lead"
      >
        Total Recipes: 1
      </span>
    </h1>
    <RecipesGrid
      isUserFav={[Function]}
      loading={false}
      recipes={
        Array [
          Object {
            "category": "",
            "downVotes": 1,
            "recipeId": 1,
            "recipeName": "Ogbemudia Rex",
            "upVotes": 1,
            "views": 1,
          },
        ]
      }
      toggleFav={[Function]}
    />
  </div>
</div>
`;

exports[`Dashboard component  should match empty snapshot when loading is true 1`] = `
<Dashboard
  actions={
    Object {
      "getProfile": [Function],
      "getTopRecipes": [Function],
      "logout": [Function],
      "toggleFav": [Function],
    }
  }
  loading={true}
  match={
    Object {
      "history": Object {
        "push": [Function],
      },
    }
  }
  recipes={
    Array [
      Object {
        "category": "",
        "downVotes": 1,
        "recipeId": 1,
        "recipeName": "Ogbemudia Rex",
        "upVotes": 1,
        "views": 1,
      },
    ]
  }
  store={
    Object {
      "store": [Function],
    }
  }
  user={
    Object {
      "createdRecipes": Array [
        Object {
          "category": "",
          "downVotes": 1,
          "recipeId": 1,
          "recipeName": "Ogbemudia Rex",
          "upVotes": 1,
          "views": 1,
        },
      ],
      "favRecipes": Array [
        Object {
          "category": "",
          "downVotes": 1,
          "recipeId": 1,
          "recipeName": "Ogbemudia Rex",
          "upVotes": 1,
          "views": 1,
        },
      ],
    }
  }
>
  <div
    className="container-fluid no-padding"
    id="dashboard"
  >
    <TopBar
      avatar={true}
      handleSubmit={[Function]}
      push={[Function]}
      search={true}
    >
      <div
        className="col-12 top-bar"
      >
        <div
          className="top-bar-top"
        >
          <nav
            className="nav"
          >
            <a
              className="nav-link"
              href="#"
              onClick={[Function]}
            >
              my profile
            </a>
          </nav>
          <div
            className="avatar avatar-sm"
            data-placement="right"
            data-toggle="tooltip"
            id="myPopover"
            title="Tooltip on right"
          />
          <SearchBox
            handleSubmit={[Function]}
          >
            <form
              className="searchbox"
              onSubmit={[Function]}
            >
              <input
                className="form-control text-input"
                onChange={[Function]}
                placeholder="Search"
                type="search"
                value=""
              />
              <Icon
                iconClass="fa fa-search"
              >
                <div
                  className="icon-wrapper"
                >
                  <i
                    className="icon fa fa-search"
                  >
                    <span />
                  </i>
                </div>
              </Icon>
            </form>
          </SearchBox>
        </div>
        <div
          className="top-bar-bottom"
        >
          <nav
            className="nav"
          >
            <a
              className="nav-link"
              href="#"
              id="getTopRecipes"
              onClick={[Function]}
            >
              Top recipes
            </a>
            <a
              className="nav-link"
              href="#"
              id="getMyRecipes"
              onClick={[Function]}
            >
              My recipes
            </a>
            <a
              className="nav-link"
              href="#"
              id="getFavRecipes"
              onClick={[Function]}
            >
              Favourite recipes
            </a>
          </nav>
          <nav
            className="nav"
          >
            <a
              className="nav-link logout text-capitalize"
              href="#"
              id="logout"
              onClick={[Function]}
            >
              logout
            </a>
          </nav>
        </div>
      </div>
    </TopBar>
    <div
      className="row dashboard d-flex flex-column"
    >
      <Loader
        loading={true}
      >
        <div
          className="loader"
        >
          <onlyUpdateForKeys(Loader)
            color="#7B4E28"
            loading={true}
            size={60}
          >
            <Loader
              color="#7B4E28"
              loading={true}
              size={60}
            >
              <div
                className="css-1tc3baf"
              />
            </Loader>
          </onlyUpdateForKeys(Loader)>
          <h1
            className="display-4"
          >
            Loading...
          </h1>
        </div>
      </Loader>
    </div>
  </div>
</Dashboard>
`;

exports[`Dashboard component  should match empty snapshot when recipes is undefined 1`] = `
<Dashboard
  actions={
    Object {
      "getProfile": [Function],
      "getTopRecipes": [Function],
      "logout": [Function],
      "toggleFav": [Function],
    }
  }
  loading={true}
  match={
    Object {
      "history": Object {
        "push": [Function],
      },
    }
  }
  store={
    Object {
      "store": [Function],
    }
  }
  user={
    Object {
      "createdRecipes": Array [
        Object {
          "category": "",
          "downVotes": 1,
          "recipeId": 1,
          "recipeName": "Ogbemudia Rex",
          "upVotes": 1,
          "views": 1,
        },
      ],
      "favRecipes": Array [
        Object {
          "category": "",
          "downVotes": 1,
          "recipeId": 1,
          "recipeName": "Ogbemudia Rex",
          "upVotes": 1,
          "views": 1,
        },
      ],
    }
  }
>
  <div
    className="container-fluid no-padding"
    id="dashboard"
  >
    <TopBar
      avatar={true}
      handleSubmit={[Function]}
      push={[Function]}
      search={true}
    >
      <div
        className="col-12 top-bar"
      >
        <div
          className="top-bar-top"
        >
          <nav
            className="nav"
          >
            <a
              className="nav-link"
              href="#"
              onClick={[Function]}
            >
              my profile
            </a>
          </nav>
          <div
            className="avatar avatar-sm"
            data-placement="right"
            data-toggle="tooltip"
            id="myPopover"
            title="Tooltip on right"
          />
          <SearchBox
            handleSubmit={[Function]}
          >
            <form
              className="searchbox"
              onSubmit={[Function]}
            >
              <input
                className="form-control text-input"
                onChange={[Function]}
                placeholder="Search"
                type="search"
                value=""
              />
              <Icon
                iconClass="fa fa-search"
              >
                <div
                  className="icon-wrapper"
                >
                  <i
                    className="icon fa fa-search"
                  >
                    <span />
                  </i>
                </div>
              </Icon>
            </form>
          </SearchBox>
        </div>
        <div
          className="top-bar-bottom"
        >
          <nav
            className="nav"
          >
            <a
              className="nav-link"
              href="#"
              id="getTopRecipes"
              onClick={[Function]}
            >
              Top recipes
            </a>
            <a
              className="nav-link"
              href="#"
              id="getMyRecipes"
              onClick={[Function]}
            >
              My recipes
            </a>
            <a
              className="nav-link"
              href="#"
              id="getFavRecipes"
              onClick={[Function]}
            >
              Favourite recipes
            </a>
          </nav>
          <nav
            className="nav"
          >
            <a
              className="nav-link logout text-capitalize"
              href="#"
              id="logout"
              onClick={[Function]}
            >
              logout
            </a>
          </nav>
        </div>
      </div>
    </TopBar>
    <div
      className="row dashboard d-flex flex-column"
    >
      <Loader
        loading={true}
      >
        <div
          className="loader"
        >
          <onlyUpdateForKeys(Loader)
            color="#7B4E28"
            loading={true}
            size={60}
          >
            <Loader
              color="#7B4E28"
              loading={true}
              size={60}
            >
              <div
                className="css-1tc3baf"
              />
            </Loader>
          </onlyUpdateForKeys(Loader)>
          <h1
            className="display-4"
          >
            Loading...
          </h1>
        </div>
      </Loader>
    </div>
  </div>
</Dashboard>
`;
